--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -8,7 +8,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.inbaltako.tictactoe.SplashActivity"
-    android:background="@color/colorBackground">
+    android:background="@color/colorBackground"
+    android:layoutDirection="ltr">
 
     <ImageView
         android:layout_width="wrap_content"
