--- a/app/src/main/res/layout/fragment_android_win_fragment.xml
+++ b/app/src/main/res/layout/fragment_android_win_fragment.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layoutDirection="ltr">
 
     <LinearLayout
         android:id="@+id/topLayout"
@@ -9,13 +10,14 @@
         android:layout_centerInParent="true">
 
         <TextView
+            android:id="@+id/you"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
             android:padding="20dp"
             android:text="@string/you"
             android:textColor="@color/white"
-            android:textSize="75sp"
+            android:textSize="65sp"
             android:textStyle="bold" />
 
         <TextView
@@ -27,7 +29,8 @@
             android:paddingTop="20dp"
             android:text="@string/lost"
             android:textColor="@color/colorAccent"
-            android:textSize="75sp" />
+            android:textSize="65sp" />
+
     </LinearLayout>
 
     <ImageButton
@@ -44,6 +47,7 @@
         android:id="@+id/exitAndroidWon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/newGameAndroidWon"
         android:layout_below="@+id/newGameAndroidWon"
         android:layout_centerHorizontal="true"
         android:background="@color/colorPrimary"
