--- a/app/src/main/res/layout/fragment_human_win_fragment.xml
+++ b/app/src/main/res/layout/fragment_human_win_fragment.xml
@@ -1,6 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layoutDirection="ltr">
 
     <LinearLayout
         android:id="@+id/topLayout"
@@ -15,7 +16,7 @@
             android:padding="20dp"
             android:text="@string/you"
             android:textColor="@color/white"
-            android:textSize="75sp"
+            android:textSize="65sp"
             android:textStyle="bold" />
 
         <TextView
@@ -27,7 +28,7 @@
             android:paddingTop="20dp"
             android:text="@string/won"
             android:textColor="@color/colorAccent"
-            android:textSize="75sp" />
+            android:textSize="65sp" />
     </LinearLayout>
 
     <ImageButton
@@ -48,5 +49,6 @@
         android:layout_centerHorizontal="true"
         android:background="@color/colorPrimary"
         android:padding="20dp"
-        android:src="@drawable/exit_btn" />
+        android:src="@drawable/exit_btn"
+        android:layout_alignLeft="@+id/newGameHumanWon"/>
 </RelativeLayout>
