--- a/app/src/main/res/layout/return_dialog.xml
+++ b/app/src/main/res/layout/return_dialog.xml
@@ -2,11 +2,12 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/colorPrimaryDark">
+    android:background="@color/colorPrimaryDark"
+    android:layoutDirection="ltr">
 
     <TextView
         android:id="@+id/DialogTitle"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignStart="@id/relativeLayout"
         android:textColor="@color/white"
@@ -22,7 +23,7 @@
 
         <Button
             android:id="@+id/dialogButtonStay"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/stay"
             android:background="@color/colorPrimaryDark"
@@ -33,7 +34,7 @@
 
         <Button
             android:id="@+id/dialogButtonLeave"
-            android:layout_width="100dp"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/leave"
             android:background="@color/colorPrimaryDark"
