--- a/app/src/main/res/layout/activity_board.xml
+++ b/app/src/main/res/layout/activity_board.xml
@@ -6,9 +6,10 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:layoutDirection="ltr"
-    tools:context="com.inbaltako.tictactoe.BoardActivity">
+    tools:context=".BoardActivityComp">
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -40,7 +41,9 @@
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true">
+        android:layout_below="@+id/linearLayout"
+        android:layout_alignParentStart="true"
+        android:id="@+id/relativeLayout3">
 
         <ImageView
             android:layout_width="wrap_content"
@@ -156,9 +159,9 @@
         android:id="@+id/linearLayout2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:padding="3dp">
+        android:padding="3dp"
+        android:layout_below="@+id/relativeLayout3"
+        android:layout_centerHorizontal="true">
 
         <TextView
             android:id="@+id/movesLeft"
@@ -185,4 +188,88 @@
             android:textSize="25sp"
             android:textStyle="bold" />
     </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/linearLayout3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="3dp"
+        android:weightSum="1"
+        android:layout_above="@+id/publisherAdView"
+        android:layout_alignParentStart="true">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="3dp"
+            android:textColor="@color/white"
+            android:textSize="25sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="3dp"
+            android:text="Computer:"
+            android:textColor="@color/colorAccent"
+            android:textSize="20dp"
+            android:textStyle="normal"
+            android:layout_weight="30.92" />
+
+        <TextView
+            android:id="@+id/viewScoreComputer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="3dp"
+            android:textColor="@color/white"
+            android:textSize="25sp" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/linearLayout4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:padding="3dp"
+        android:weightSum="1"
+        android:layout_alignTop="@+id/linearLayout3"
+        android:layout_alignParentEnd="true">
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="3dp"
+            android:textColor="@color/white"
+            android:textSize="25sp" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="3dp"
+            android:text="You:"
+            android:textColor="@color/colorAccent"
+            android:textSize="20dp"
+            android:textStyle="normal"
+            android:layout_weight="30.92" />
+
+        <TextView
+            android:id="@+id/viewScoreHuman"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="3dp"
+            android:textColor="@color/white"
+            android:textSize="25sp" />
+    </LinearLayout>
+
+    <com.google.android.gms.ads.doubleclick.PublisherAdView
+        android:id="@+id/publisherAdView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/comp_board_double_click_banner">
+    </com.google.android.gms.ads.doubleclick.PublisherAdView>
 </RelativeLayout>
