--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:ads="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/colorBackground"
@@ -16,8 +17,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/logo"
+        android:paddingTop="50dp"
+        android:id="@+id/imageView"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:paddingTop="50dp"/>
+        android:layout_marginTop="46dp" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -25,27 +29,56 @@
         android:layout_centerInParent="true"
         android:id="@+id/relativeLayout">
 
-        <ImageButton
-            android:id="@+id/newGameBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:background="@color/colorPrimary"
-            android:src="@drawable/new_game_btn"
-            android:onClick="btnClicked"
-            android:padding="16dp" />
-
-        <ImageButton
-            android:id="@+id/exitBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/exit_btn"
-            android:background="@color/colorPrimary"
-            android:padding="16dp"
-            android:layout_below="@+id/newGameBtn"
-            android:onClick="btnClicked"
-            android:layout_alignLeft="@+id/newGameBtn"/>
-
     </RelativeLayout>
+
+    <ImageButton
+        android:id="@+id/exitBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/exit_btn"
+        android:background="@color/colorPrimary"
+        android:padding="16dp"
+        android:onClick="btnClicked"
+
+        android:layout_below="@+id/two_player_game"
+        android:layout_alignStart="@+id/one_player_game" />
+
+    <TextView
+        android:id="@+id/one_player_game"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#F5A623"
+        android:padding="16dp"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="One player game"
+        android:onClick="btnClicked"
+        android:clickable="true"
+        android:layout_alignTop="@+id/relativeLayout"
+        android:layout_centerHorizontal="true" />
+
+    <TextView
+        android:id="@+id/two_player_game"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textColor="#F5A623"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Two player game"
+        android:padding="16dp"
+        android:clickable="true"
+        android:onClick="btnClicked"
+        android:layout_below="@+id/one_player_game"
+        android:layout_alignEnd="@+id/one_player_game" />
+
+
+    <com.google.android.gms.ads.doubleclick.PublisherAdView
+        android:id="@+id/publisherAdView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"
+        ads:adSize="BANNER"
+        ads:adUnitId="@string/double_click_banner">
+    </com.google.android.gms.ads.doubleclick.PublisherAdView>
+
 
 </RelativeLayout>
