--- a/app/src/main/res/layout/fragment_tie_fragment.xml
+++ b/app/src/main/res/layout/fragment_tie_fragment.xml
@@ -9,11 +9,44 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true">
 
+    </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/newGameTie"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        android:padding="20dp"
+        android:src="@drawable/new_game_btn"
+        android:layout_below="@+id/topLayout"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="35dp" />
+
+    <ImageButton
+        android:id="@+id/exitTie"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/newGameTie"
+        android:layout_centerHorizontal="true"
+        android:background="@color/colorPrimary"
+        android:padding="20dp"
+        android:src="@drawable/exit_btn"
+        android:layout_alignLeft="@+id/newGameTie"/>
+
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/topLayout"
+        android:layout_alignParentStart="true">
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:padding="20dp"
+            android:paddingTop="10dp"
+            android:paddingLeft="75dp"
+            android:paddingRight="20dp"
             android:text="@string/it_s_a"
             android:textColor="@color/white"
             android:textSize="65sp"
@@ -30,26 +63,5 @@
             android:textColor="@color/colorAccent"
             android:textSize="65sp" />
     </LinearLayout>
-
-    <ImageButton
-        android:id="@+id/newGameTie"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/topLayout"
-        android:layout_centerHorizontal="true"
-        android:background="@color/colorPrimary"
-        android:padding="20dp"
-        android:src="@drawable/new_game_btn" />
-
-    <ImageButton
-        android:id="@+id/exitTie"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/newGameTie"
-        android:layout_centerHorizontal="true"
-        android:background="@color/colorPrimary"
-        android:padding="20dp"
-        android:src="@drawable/exit_btn"
-        android:layout_alignLeft="@+id/newGameTie"/>
 
 </RelativeLayout>
